z-index fix on ID checker app

--- a/assets/scss/app/new/_modal.scss
+++ b/assets/scss/app/new/_modal.scss
@@ -28,7 +28,7 @@
 .modal-overlay[aria-hidden="false"] {
   opacity: 1;
   visibility: visible;
-  z-index: 2;
+  z-index: 200;
 }
 
 /*
